--- a/notebooks_for_development/process_gis_output.ipynb
+++ b/notebooks_for_development/process_gis_output.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "9f0afe2a",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "97a18f44",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "a601810e",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "c8a05890",
    "metadata": {},
    "outputs": [],
@@ -571,6 +571,7 @@
     "hdr.write('display_string;British Antarctic Territory;;\\n')\n",
     "hdr.write('start_date;1962 March 3;Statutory Instrument - the British Antarctic Territory Order in Council 1962/400;britishantarcticterritory.org.uk\\n')\n",
     "hdr.write('end_date;-99999;;\\n')\n",
+    "hdr.write('polygon_spacing;-99999;;\\n')\n",
     "hdr.write('other;;;\\n')\n",
     "\n",
     "hdr.write('##############################\\n')\n",
